<resources>
    <string name="app_name">Fahram Education</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save">Continue</string>
    <string name="logo">https://fahram.dev/img/logo.webp</string>
    <string name="course">Course</string>
    <string name="path">Path</string>
    <string name="slug">Slug</string>
    <string name="view">View</string>
    <string name="level">Level</string>
    <string name="module">Module</string>
    <string name="teacher">Teacher</string>
    <string name="my_task">My Task</string>
    <string name="logout">Logout</string>
    <string name="fahram_courses">Fahram Courses</string>
    <string name="login">Login</string>
    <string name="input_task">Input Task</string>
    <string name="see_all_courses">See All Courses</string>
    <string name="my_course">My Course</string>
    <string name="my_profile">My Profile</string>
    <string name="article">Article</string>
    <string name="courses">Courses</string>
    <string name="articles">Articles</string>
    <string name="task">Task</string>
    <string name="contact_details">Contact Details</string>
    <string name="nim">Nim</string>
    <string name="clas">Class</string>
    <string name="campus">Campus</string>
    <string name="phone">Phone</string>
    <string name="joined_at">Joined At</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="none">None</string>
    <string name="sign_out_confirmation_message">Are you sure you want to sign out?</string>
    <string name="author">Author</string>
    <string name="category">Category</string>
</resources>