<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".view.article.ArticleDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/app_name"
                app:titleTextColor="?attr/colorSecondaryVariant"/>


        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/articleImage"
            android:layout_width="0dp"
            android:layout_height="240dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            tools:srcCompat="@tools:sample/avatars"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/published_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/article"
            android:textSize="12sp"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/articleImage" />

        <TextView
            android:id="@+id/articleTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/article"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/published_at" />

        <ImageView
            android:id="@+id/authorImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/articleTitle"
            tools:srcCompat="@tools:sample/avatars"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/author"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/authorImage"
            app:layout_constraintTop_toTopOf="@+id/authorImage" />

        <TextView
            android:id="@+id/authorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/author"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/authorImage"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthor" />

        <TextView
            android:id="@+id/tvSlug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/slug"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authorImage" />

        <TextView
            android:id="@+id/articleSlug"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/article"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvSlug"
            app:layout_constraintTop_toBottomOf="@+id/authorImage" />

        <TextView
            android:id="@+id/articleExcerpt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/article"
            android:textSize="16sp"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSlug" />

        <ImageView
            android:id="@+id/viewImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/articleExcerpt"
            app:srcCompat="@drawable/ic_remove_red_eye"
            app:tint="?attr/colorPrimary"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/view"
            android:textSize="16sp"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/viewImage"
            app:layout_constraintStart_toEndOf="@+id/viewImage"
            app:layout_constraintTop_toTopOf="@+id/viewImage" />

        <ImageView
            android:id="@+id/categoryImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@id/tvCategory"
            app:layout_constraintTop_toBottomOf="@+id/articleExcerpt"
            app:srcCompat="@drawable/ic_view_list"
            app:tint="?attr/colorPrimary"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:text="@string/category"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/categoryImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/categoryImage" />

        <TextView
            android:id="@+id/articleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/article"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="@+id/tvView"
            app:layout_constraintStart_toStartOf="@+id/viewImage"
            app:layout_constraintTop_toBottomOf="@+id/viewImage" />

        <TextView
            android:id="@+id/articleCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/article"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="@+id/tvCategory"
            app:layout_constraintStart_toStartOf="@+id/categoryImage"
            app:layout_constraintTop_toBottomOf="@+id/categoryImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>